--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "css-loader": "^0.28.10",
     "node-sass": "^4.7.2",
+    "orbit-controls": "^1.2.4",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.20.2",
     "three": "^0.90.0"
