--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
   "dependencies": {
     "css-loader": "^0.28.10",
     "node-sass": "^4.7.2",
-    "orbit-controls": "^1.2.4",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.20.2",
-    "three": "^0.90.0"
+    "three": "^0.90.0",
+    "three-orbit-controls": "^82.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
