dat.gui test + setup

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/misspia/webgl-boids#readme",
   "dependencies": {
     "css-loader": "^0.28.10",
+    "dat.gui": "^0.7.1",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.20.2",
